# ece-world-paris-ing1-2022-2023-ponctuel

./: .gitignore  CMakeLists.txt  Frogger.c  Frogger.h  README.md  guitar_hero.c  guitar_hero.h  high_score.txt  main.c  main_guitar_hero.c  menu.h  snake.h
images/: pomme_s3.pdn  queueB_s3.pdn  queue_s3.pdn  tete_s2.pdn  tete_s3.pdn
presentation/: presentation.md  theme.css
